# friction-designer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
src/cmake/: friction-designer-common.cmake  friction-designer-meta.cmake  friction-designer-version.cmake
src/engine/: CMakeLists.txt  skia
src/tools/: ci.sh
